--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://futingfei.github.io"
+baseURL = "https://fifteen42.github.io"
 languageCode = "en-us"
 title = "Fat Blog"
 theme = "cactus"
@@ -36,7 +36,7 @@ weight = 4
 
 [[params.social]]
   name = "github"
-  link = "https://github.com/futingfei"
+  link = "https://github.com/fifteen42"
 
 [[params.social]]
   name = "email"
