--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://fifteen42.github.io"
+baseURL = "http://fifteen42.github.io"
 languageCode = "en-us"
 title = "Fat Blog"
 theme = "cactus"
